# ReviewHood

./: .gitignore  README.md  ReviewHood.postman_collection.json  hello.py  movie_api_postman_collection.json  pyproject.toml
ReviewHood/: settings.py  urls.py
movie/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
movie/migrations/: 0001_initial.py  0002_review.py  0003_alter_review_unique_together.py  0004_alter_review_rating.py  0005_alter_review_rating.py
src/: manage.py
src/ReviewHood/: asgi.py  settings.py  urls.py  wsgi.py
